Feat: script source to an external js file

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <button class="btn">Browse File</button>
         <input type="file" hidden>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
