Create id attribute to the drag area div

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/0a2a0a8b86.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="frame">
+    <div class="frame" id="drop-area">
         <div class="cloud__icon">
             <i class="fas fa-cloud-upload-alt"></i>
         </div>
